--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 <!-- footer  -->
 <footer class=" text-muted mt-5" style="background-color: rgb(22,22,22);">
-  <div class="container " style="padding:80px 0px;">
+  <div class="container  px-3 lg-px-0 xxl-px-0" style="padding:80px 0px;">
     <p class="mb-4 text-white">Questions? <a href="#" class="text-white text-decoration-underline">Contact us.</a></p>
     <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 g-3 footer">
       <div><a href="#" class="text-white text-decoration-underline d-block">FAQ</a></div>
